// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ListRow /> List Row should render pure list 1`] = `
<div
  className="adGQN"
  onClick={[Function]}
  onModalClose={[Function]}
  onRowCollapse={[Function]}
>
  <div
    className="row__wrapper row__wrapper--collapsed cCGINX"
    onCloseRequest={[Function]}
    onExpandShow="subTitle"
  >
    <div
      className="list__container fqHngb"
    >
      <div
        className="row__content fNwkgC"
      />
      <div
        className="gLKmkf"
      >
        <button
          aria-label="More Info"
          className="button--more-info icon-button--last dZkVVO"
          data-index={0}
          onClick={[Function]}
          role="button"
          type="button"
        >
          <svg
            fill="rgba(38, 38, 38, 0.65)"
            height={22}
            viewBox="0 0 5 21"
            width={5.5}
          >
            <path
              d="M0 2.5C0 1.81.242 1.22.727.732A2.394 2.394 0 0 1 2.492 0a2.42 2.42 0 0 1 1.773.732C4.755 1.221 5 1.81 5 2.5s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 5C1.8 5 1.212 4.756.727 4.268A2.418 2.418 0 0 1 0 2.5zm0 8.008c0-.692.242-1.283.727-1.773A2.39 2.39 0 0 1 2.492 8c.692 0 1.283.245 1.773.735S5 9.815 5 10.508a2.39 2.39 0 0 1-.735 1.765A2.43 2.43 0 0 1 2.492 13c-.692 0-1.28-.242-1.765-.727A2.403 2.403 0 0 1 0 10.508zM0 18.5c0-.69.242-1.28.727-1.768A2.394 2.394 0 0 1 2.492 16a2.42 2.42 0 0 1 1.773.732c.49.489.735 1.078.735 1.768s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 21c-.692 0-1.28-.244-1.765-.732A2.418 2.418 0 0 1 0 18.5z"
            />
          </svg>
        </button>
      </div>
      <button
        aria-expanded={false}
        aria-label="Expand Row"
        className="button--expand-or-collapse button--collapsed laDsHS"
        data-index={0}
        onClick={[Function]}
        role="button"
        size={45}
        type="button"
      >
        <svg
          fill="#1f262d"
          height={15}
          style={Object {}}
          viewBox="0 0 15 7"
          width={15}
        >
          <path
            d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
          />
        </svg>
      </button>
    </div>
    <div
      className="container__overflow container__overflow--collapsed cSETUG"
    />
  </div>
</div>
`;

exports[`<ListRow /> List Row unmounts correctly 1`] = `null`;

exports[`<ListRow /> List Row unmounts correctly 2`] = `null`;

exports[`<ListRow /> renders List Row with colored date correctly 1`] = `
<div
  className="adGQN"
  onClick={[Function]}
  onModalClose={[Function]}
  onRowCollapse={[Function]}
>
  <div
    className="row__wrapper row__wrapper--collapsed iDIzEx"
    onCloseRequest={[Function]}
  >
    <div
      className="list__container MPOiE"
    >
      <button
        aria-expanded={false}
        aria-label="Expand Row"
        className="button--expand-or-collapse button--collapsed laDsHS"
        data-index={0}
        onClick={[Function]}
        role="button"
        size={45}
        type="button"
      >
        <svg
          fill="#1f262d"
          height={15}
          style={Object {}}
          viewBox="0 0 15 7"
          width={15}
        >
          <path
            d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
          />
        </svg>
      </button>
      <a
        aria-label="See Tickets"
        className="link__wrapper cAyegw"
        href="/"
        onClick={[Function]}
        role="link"
      >
        <div
          className="date__wrapper hqkpgr"
        >
          <div
            className="text text--accent text--heliotrope text--primary date--text bxEtxF"
            disabled={false}
            size={
              Object {
                "large": undefined,
                "medium": "kilo",
                "small": undefined,
                "xLarge": undefined,
                "xSmall": "hecto",
              }
            }
          >
            apr 23
          </div>
          <div
            className="text text--dark text--secondary day-time--text PtISw jomeqb"
            disabled={false}
            size="hecto"
          >
            Thu, 8:00 PM
          </div>
        </div>
        <div
          className="row__content EFDAD"
        >
          <div
            className="column__mobile-only leZhxW"
          >
            <div
              className="text text--dark text--primary list-row__title keoegT iFABcd"
              disabled={false}
              size={
                Object {
                  "large": undefined,
                  "medium": "kilo",
                  "small": undefined,
                  "xLarge": undefined,
                  "xSmall": "hecto",
                }
              }
            >
              Del Mar Fairgrounds
            </div>
            <div
              className="text text--dark text--secondary list-row--subtitle PtISw jomeqb"
              disabled={false}
              size="hecto"
            >
              KABOO 3-Day Pass
            </div>
          </div>
          <div
            className="column__content list-row__title column__content--collapsed cEBRXE"
          >
            <div
              className="text text--dark text--primary keoegT iFABcd"
              disabled={false}
              size={
                Object {
                  "large": undefined,
                  "medium": "kilo",
                  "small": undefined,
                  "xLarge": undefined,
                  "xSmall": "hecto",
                }
              }
            >
              Del Mar Fairgrounds
            </div>
          </div>
          <div
            className="column__content list-row__title column__content--collapsed cEBRXE"
          >
            <div
              className="text text--dark text--primary subtitle list-row--subtitle subtitle--collapsed keoegT iFABcd"
              disabled={false}
              size={
                Object {
                  "large": undefined,
                  "medium": "kilo",
                  "small": undefined,
                  "xLarge": undefined,
                  "xSmall": "hecto",
                }
              }
            >
              KABOO 3-Day Pass
            </div>
          </div>
          <div
            className="column__content list-row__title column__content--fixed column__content--expanded eDbEhs"
          >
            <div
              className="text text--dark text--primary subtitle keoegT iFABcd"
              disabled={false}
              size={
                Object {
                  "large": undefined,
                  "medium": "kilo",
                  "small": undefined,
                  "xLarge": undefined,
                  "xSmall": "hecto",
                }
              }
            >
              KABOO 3-Day Pass
            </div>
          </div>
        </div>
        <div
          className="hcOeVH"
        >
          <span
            aria-label="See Tickets"
            className="gGqupZ"
            role="button"
            size="regular"
            width="102px"
          >
            See Tickets
          </span>
        </div>
      </a>
      <div
        className="dVldQS"
      >
        <button
          aria-label="More Info"
          className="button--more-info icon-button--last dZkVVO"
          data-index={0}
          onClick={[Function]}
          role="button"
          type="button"
        >
          <svg
            fill="rgba(38, 38, 38, 0.65)"
            height={22}
            viewBox="0 0 5 21"
            width={5.5}
          >
            <path
              d="M0 2.5C0 1.81.242 1.22.727.732A2.394 2.394 0 0 1 2.492 0a2.42 2.42 0 0 1 1.773.732C4.755 1.221 5 1.81 5 2.5s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 5C1.8 5 1.212 4.756.727 4.268A2.418 2.418 0 0 1 0 2.5zm0 8.008c0-.692.242-1.283.727-1.773A2.39 2.39 0 0 1 2.492 8c.692 0 1.283.245 1.773.735S5 9.815 5 10.508a2.39 2.39 0 0 1-.735 1.765A2.43 2.43 0 0 1 2.492 13c-.692 0-1.28-.242-1.765-.727A2.403 2.403 0 0 1 0 10.508zM0 18.5c0-.69.242-1.28.727-1.768A2.394 2.394 0 0 1 2.492 16a2.42 2.42 0 0 1 1.773.732c.49.489.735 1.078.735 1.768s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 21c-.692 0-1.28-.244-1.765-.732A2.418 2.418 0 0 1 0 18.5z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="container__overflow container__overflow--collapsed dApCYQ"
    />
  </div>
</div>
`;

exports[`<ListRow /> renders List Row with label correctly 1`] = `
<div
  className="adGQN"
  onClick={[Function]}
  onModalClose={[Function]}
  onRowCollapse={[Function]}
>
  <div
    className="row__wrapper row__wrapper--collapsed iDIzEx"
    onCloseRequest={[Function]}
  >
    <div
      className="row__content--top tLVAj"
    >
      <div
        className="nRISy"
      >
        <div
          className="row__label row__label--mobile GoYbg"
          data-index={0}
        >
          <div
            className="text text--accent text-- text--primary cKboNe iutLsF"
            disabled={false}
            size="hecto"
          >
            On sale: MON • AUG 27 • 10 AM
          </div>
        </div>
        <div
          className="row__label row__label--desktop row__label--active eQvyKb"
          data-index={0}
        >
          <div
            className="text text--accent text-- text--primary cKboNe iutLsF"
            disabled={false}
            size="hecto"
          >
            On sale: MON • AUG 27 • 10 AM
          </div>
        </div>
        <div
          className="row__label row__label--expanded row__label--desktop row__label--hidden eQvyKb"
          data-index={0}
        >
          <div
            className="text text--accent text-- text--primary cKboNe iutLsF"
            disabled={false}
            size="hecto"
          >
            On sale: MON • AUG 27 • 10 AM
          </div>
        </div>
      </div>
    </div>
    <div
      className="list__container kKmMen"
    >
      <button
        aria-expanded={false}
        aria-label="Expand Row"
        className="button--expand-or-collapse button--collapsed laDsHS"
        data-index={0}
        onClick={[Function]}
        role="button"
        size={45}
        type="button"
      >
        <svg
          fill="#1f262d"
          height={15}
          style={Object {}}
          viewBox="0 0 15 7"
          width={15}
        >
          <path
            d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
          />
        </svg>
      </button>
      <a
        aria-label="See Tickets"
        className="link__wrapper cAyegw"
        href="/"
        onClick={[Function]}
        role="link"
      >
        <div
          className="date__wrapper hqkpgr"
        >
          <div
            className="text text--dark text--primary date--text gpIiDw"
            disabled={false}
            size={
              Object {
                "large": undefined,
                "medium": "kilo",
                "small": undefined,
                "xLarge": undefined,
                "xSmall": "hecto",
              }
            }
          >
            apr 23
          </div>
          <div
            className="text text--dark text--secondary day-time--text PtISw jomeqb"
            disabled={false}
            size="hecto"
          >
            Thu, 8:00 PM
          </div>
        </div>
        <div
          className="row__content EFDAD"
        >
          <div
            className="column__mobile-only leZhxW"
          >
            <div
              className="text text--dark text--primary list-row__title keoegT iFABcd"
              disabled={false}
              size={
                Object {
                  "large": undefined,
                  "medium": "kilo",
                  "small": undefined,
                  "xLarge": undefined,
                  "xSmall": "hecto",
                }
              }
            >
              Del Mar Fairgrounds
            </div>
            <div
              className="text text--dark text--secondary list-row--subtitle PtISw jomeqb"
              disabled={false}
              size="hecto"
            >
              KABOO 3-Day Pass
            </div>
          </div>
          <div
            className="column__content list-row__title column__content--collapsed cEBRXE"
          >
            <div
              className="text text--dark text--primary keoegT iFABcd"
              disabled={false}
              size={
                Object {
                  "large": undefined,
                  "medium": "kilo",
                  "small": undefined,
                  "xLarge": undefined,
                  "xSmall": "hecto",
                }
              }
            >
              Del Mar Fairgrounds
            </div>
          </div>
          <div
            className="column__content list-row__title column__content--collapsed cEBRXE"
          >
            <div
              className="text text--dark text--primary subtitle list-row--subtitle subtitle--collapsed keoegT iFABcd"
              disabled={false}
              size={
                Object {
                  "large": undefined,
                  "medium": "kilo",
                  "small": undefined,
                  "xLarge": undefined,
                  "xSmall": "hecto",
                }
              }
            >
              KABOO 3-Day Pass
            </div>
          </div>
          <div
            className="column__content list-row__title column__content--fixed column__content--expanded eDbEhs"
          >
            <div
              className="text text--dark text--primary subtitle keoegT iFABcd"
              disabled={false}
              size={
                Object {
                  "large": undefined,
                  "medium": "kilo",
                  "small": undefined,
                  "xLarge": undefined,
                  "xSmall": "hecto",
                }
              }
            >
              KABOO 3-Day Pass
            </div>
          </div>
        </div>
        <div
          className="hcOeVH"
        >
          <span
            aria-label="See Tickets"
            className="gGqupZ"
            role="button"
            size="regular"
            width="102px"
          >
            See Tickets
          </span>
        </div>
      </a>
      <div
        className="dVldQS"
      >
        <button
          aria-label="More Info"
          className="button--more-info icon-button--last dZkVVO"
          data-index={0}
          onClick={[Function]}
          role="button"
          type="button"
        >
          <svg
            fill="rgba(38, 38, 38, 0.65)"
            height={22}
            viewBox="0 0 5 21"
            width={5.5}
          >
            <path
              d="M0 2.5C0 1.81.242 1.22.727.732A2.394 2.394 0 0 1 2.492 0a2.42 2.42 0 0 1 1.773.732C4.755 1.221 5 1.81 5 2.5s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 5C1.8 5 1.212 4.756.727 4.268A2.418 2.418 0 0 1 0 2.5zm0 8.008c0-.692.242-1.283.727-1.773A2.39 2.39 0 0 1 2.492 8c.692 0 1.283.245 1.773.735S5 9.815 5 10.508a2.39 2.39 0 0 1-.735 1.765A2.43 2.43 0 0 1 2.492 13c-.692 0-1.28-.242-1.765-.727A2.403 2.403 0 0 1 0 10.508zM0 18.5c0-.69.242-1.28.727-1.768A2.394 2.394 0 0 1 2.492 16a2.42 2.42 0 0 1 1.773.732c.49.489.735 1.078.735 1.768s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 21c-.692 0-1.28-.244-1.765-.732A2.418 2.418 0 0 1 0 18.5z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="container__overflow container__overflow--collapsed dApCYQ"
    />
  </div>
</div>
`;

exports[`<ListRow /> renders List Row with link correctly 1`] = `
<div
  className="adGQN"
  onClick={[Function]}
  onModalClose={[Function]}
  onRowCollapse={[Function]}
>
  <div
    className="row__wrapper row__wrapper--collapsed iDIzEx"
    onCloseRequest={[Function]}
  >
    <div
      className="list__container eqMTEn"
    >
      <button
        aria-expanded={false}
        aria-label="Expand Row"
        className="button--expand-or-collapse button--collapsed laDsHS"
        data-index={0}
        onClick={[Function]}
        role="button"
        size={45}
        type="button"
      >
        <svg
          fill="#1f262d"
          height={15}
          style={Object {}}
          viewBox="0 0 15 7"
          width={15}
        >
          <path
            d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
          />
        </svg>
      </button>
      <a
        aria-label="See Tickets"
        className="link__wrapper cAyegw"
        href="/"
        onClick={[Function]}
        role="link"
      >
        <div
          className="date__wrapper hqkpgr"
        >
          <div
            className="text text--dark text--primary date--text gpIiDw"
            disabled={false}
            size={
              Object {
                "large": undefined,
                "medium": "kilo",
                "small": undefined,
                "xLarge": undefined,
                "xSmall": "hecto",
              }
            }
          >
            apr 23
          </div>
          <div
            className="text text--dark text--secondary day-time--text PtISw jomeqb"
            disabled={false}
            size="hecto"
          >
            Thu, 8:00 PM
          </div>
        </div>
        <div
          className="row__content EFDAD"
        >
          <div
            className="column__mobile-only leZhxW"
          >
            <div
              className="text text--dark text--primary list-row__title keoegT iFABcd"
              disabled={false}
              size={
                Object {
                  "large": undefined,
                  "medium": "kilo",
                  "small": undefined,
                  "xLarge": undefined,
                  "xSmall": "hecto",
                }
              }
            >
              Del Mar Fairgrounds
            </div>
            <div
              className="text text--dark text--secondary list-row--subtitle PtISw jomeqb"
              disabled={false}
              size="hecto"
            >
              KABOO 3-Day Pass
            </div>
          </div>
          <div
            className="column__content list-row__title column__content--collapsed cEBRXE"
          >
            <div
              className="text text--dark text--primary keoegT iFABcd"
              disabled={false}
              size={
                Object {
                  "large": undefined,
                  "medium": "kilo",
                  "small": undefined,
                  "xLarge": undefined,
                  "xSmall": "hecto",
                }
              }
            >
              Del Mar Fairgrounds
            </div>
          </div>
          <div
            className="column__content list-row__title column__content--collapsed cEBRXE"
          >
            <div
              className="text text--dark text--primary subtitle list-row--subtitle subtitle--collapsed keoegT iFABcd"
              disabled={false}
              size={
                Object {
                  "large": undefined,
                  "medium": "kilo",
                  "small": undefined,
                  "xLarge": undefined,
                  "xSmall": "hecto",
                }
              }
            >
              KABOO 3-Day Pass
            </div>
          </div>
          <div
            className="column__content list-row__title column__content--fixed column__content--expanded eDbEhs"
          >
            <div
              className="text text--dark text--primary subtitle keoegT iFABcd"
              disabled={false}
              size={
                Object {
                  "large": undefined,
                  "medium": "kilo",
                  "small": undefined,
                  "xLarge": undefined,
                  "xSmall": "hecto",
                }
              }
            >
              KABOO 3-Day Pass
            </div>
          </div>
        </div>
        <div
          className="hcOeVH"
        >
          <span
            aria-label="See Tickets"
            className="gGqupZ"
            role="button"
            size="regular"
            width="102px"
          >
            See Tickets
          </span>
          <div
            className="eGnrhg"
          >
            <div
              className="text text--dark text--secondary PtISw ifpOvA"
              disabled={false}
              size="uno"
            >
              on Partner Site
            </div>
          </div>
        </div>
      </a>
      <div
        className="dVldQS"
      >
        <button
          aria-label="More Info"
          className="button--more-info icon-button--last dZkVVO"
          data-index={0}
          onClick={[Function]}
          role="button"
          type="button"
        >
          <svg
            fill="rgba(38, 38, 38, 0.65)"
            height={22}
            viewBox="0 0 5 21"
            width={5.5}
          >
            <path
              d="M0 2.5C0 1.81.242 1.22.727.732A2.394 2.394 0 0 1 2.492 0a2.42 2.42 0 0 1 1.773.732C4.755 1.221 5 1.81 5 2.5s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 5C1.8 5 1.212 4.756.727 4.268A2.418 2.418 0 0 1 0 2.5zm0 8.008c0-.692.242-1.283.727-1.773A2.39 2.39 0 0 1 2.492 8c.692 0 1.283.245 1.773.735S5 9.815 5 10.508a2.39 2.39 0 0 1-.735 1.765A2.43 2.43 0 0 1 2.492 13c-.692 0-1.28-.242-1.765-.727A2.403 2.403 0 0 1 0 10.508zM0 18.5c0-.69.242-1.28.727-1.768A2.394 2.394 0 0 1 2.492 16a2.42 2.42 0 0 1 1.773.732c.49.489.735 1.078.735 1.768s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 21c-.692 0-1.28-.244-1.765-.732A2.418 2.418 0 0 1 0 18.5z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="row__content--bottom gMkfym"
    >
      <div
        className="jMKHiO"
      >
        <button
          className="link--row-options eXFyMS hAlRXB"
          data-index={0}
          href={null}
          onClick={[Function]}
          rel="_self"
          size="hecto"
          target=""
        >
          Ticket Options Available
        </button>
        <span
          className="link--row-options fRvHEx emWuwJ"
          data-index={0}
          href=""
          onClick={null}
          rel="_self"
          size="hecto"
          target=""
        >
          Ticket Options Available
        </span>
      </div>
    </div>
    <div
      className="container__overflow container__overflow--collapsed dApCYQ"
    />
  </div>
</div>
`;

exports[`<ListRow /> renders List Row with styled button 1`] = `
<div
  className="adGQN"
  onClick={[Function]}
  onModalClose={[Function]}
  onRowCollapse={[Function]}
>
  <div
    className="row__wrapper row__wrapper--collapsed iDIzEx"
    onCloseRequest={[Function]}
  >
    <div
      className="list__container MPOiE"
    >
      <button
        aria-expanded={false}
        aria-label="Expand Row"
        className="button--expand-or-collapse button--collapsed laDsHS"
        data-index={0}
        onClick={[Function]}
        role="button"
        size={45}
        type="button"
      >
        <svg
          fill="#1f262d"
          height={15}
          style={Object {}}
          viewBox="0 0 15 7"
          width={15}
        >
          <path
            d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
          />
        </svg>
      </button>
      <a
        aria-label="More Info"
        className="link__wrapper cAyegw"
        href="/"
        onClick={[Function]}
        role="link"
      >
        <div
          className="date__wrapper hqkpgr"
        >
          <div
            className="text text--dark text--primary date--text gpIiDw"
            disabled={false}
            size={
              Object {
                "large": undefined,
                "medium": "kilo",
                "small": undefined,
                "xLarge": undefined,
                "xSmall": "hecto",
              }
            }
          >
            apr 23
          </div>
          <div
            className="text text--dark text--secondary day-time--text PtISw jomeqb"
            disabled={false}
            size="hecto"
          >
            Thu, 8:00 PM
          </div>
        </div>
        <div
          className="row__content EFDAD"
        >
          <div
            className="column__mobile-only leZhxW"
          >
            <div
              className="text text--dark text--primary list-row__title keoegT iFABcd"
              disabled={false}
              size={
                Object {
                  "large": undefined,
                  "medium": "kilo",
                  "small": undefined,
                  "xLarge": undefined,
                  "xSmall": "hecto",
                }
              }
            >
              Del Mar Fairgrounds
            </div>
            <div
              className="text text--dark text--secondary list-row--subtitle PtISw jomeqb"
              disabled={false}
              size="hecto"
            >
              KABOO 3-Day Pass
            </div>
          </div>
          <div
            className="column__content list-row__title column__content--collapsed cEBRXE"
          >
            <div
              className="text text--dark text--primary keoegT iFABcd"
              disabled={false}
              size={
                Object {
                  "large": undefined,
                  "medium": "kilo",
                  "small": undefined,
                  "xLarge": undefined,
                  "xSmall": "hecto",
                }
              }
            >
              Del Mar Fairgrounds
            </div>
          </div>
          <div
            className="column__content list-row__title column__content--collapsed cEBRXE"
          >
            <div
              className="text text--dark text--primary subtitle list-row--subtitle subtitle--collapsed keoegT iFABcd"
              disabled={false}
              size={
                Object {
                  "large": undefined,
                  "medium": "kilo",
                  "small": undefined,
                  "xLarge": undefined,
                  "xSmall": "hecto",
                }
              }
            >
              KABOO 3-Day Pass
            </div>
          </div>
          <div
            className="column__content list-row__title column__content--fixed column__content--expanded eDbEhs"
          >
            <div
              className="text text--dark text--primary subtitle keoegT iFABcd"
              disabled={false}
              size={
                Object {
                  "large": undefined,
                  "medium": "kilo",
                  "small": undefined,
                  "xLarge": undefined,
                  "xSmall": "hecto",
                }
              }
            >
              KABOO 3-Day Pass
            </div>
          </div>
        </div>
        <div
          className="hcOeVH"
        >
          <span
            aria-label="More Info"
            className="dCXubg"
            role="button"
            size="regular"
            width="102px"
          >
            More Info
          </span>
        </div>
      </a>
      <div
        className="dVldQS"
      >
        <button
          aria-label="More Info"
          className="button--more-info icon-button--last dZkVVO"
          data-index={0}
          onClick={[Function]}
          role="button"
          type="button"
        >
          <svg
            fill="rgba(38, 38, 38, 0.65)"
            height={22}
            viewBox="0 0 5 21"
            width={5.5}
          >
            <path
              d="M0 2.5C0 1.81.242 1.22.727.732A2.394 2.394 0 0 1 2.492 0a2.42 2.42 0 0 1 1.773.732C4.755 1.221 5 1.81 5 2.5s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 5C1.8 5 1.212 4.756.727 4.268A2.418 2.418 0 0 1 0 2.5zm0 8.008c0-.692.242-1.283.727-1.773A2.39 2.39 0 0 1 2.492 8c.692 0 1.283.245 1.773.735S5 9.815 5 10.508a2.39 2.39 0 0 1-.735 1.765A2.43 2.43 0 0 1 2.492 13c-.692 0-1.28-.242-1.765-.727A2.403 2.403 0 0 1 0 10.508zM0 18.5c0-.69.242-1.28.727-1.768A2.394 2.394 0 0 1 2.492 16a2.42 2.42 0 0 1 1.773.732c.49.489.735 1.078.735 1.768s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 21c-.692 0-1.28-.244-1.765-.732A2.418 2.418 0 0 1 0 18.5z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="container__overflow container__overflow--collapsed dApCYQ"
    />
  </div>
</div>
`;

exports[`<ListRow /> renders List Row with title correctly when expanded 1`] = `
<div
  className="adGQN"
  onClick={[Function]}
  onModalClose={[Function]}
  onRowCollapse={[Function]}
>
  <div
    className="row__wrapper row__wrapper--expanded iDIzEx"
    onCloseRequest={[Function]}
  >
    <div
      className="list__container MPOiE"
    >
      <button
        aria-expanded={true}
        aria-label="Collapse Row"
        className="button--expand-or-collapse button--expanded laDsHS"
        data-index={0}
        onClick={[Function]}
        role="button"
        size={45}
        type="button"
      >
        <svg
          fill="#1f262d"
          height={15}
          style={Object {}}
          viewBox="0 0 15 7"
          width={15}
        >
          <path
            d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
          />
        </svg>
      </button>
      <a
        aria-label="See Tickets"
        className="link__wrapper cAyegw"
        href="/"
        onClick={[Function]}
        role="link"
      >
        <div
          className="date__wrapper hqkpgr"
        >
          <div
            className="text text--dark text--primary date--text gpIiDw"
            disabled={false}
            size={
              Object {
                "large": undefined,
                "medium": "kilo",
                "small": undefined,
                "xLarge": undefined,
                "xSmall": "hecto",
              }
            }
          >
            apr 23
          </div>
          <div
            className="text text--dark text--secondary day-time--text PtISw jomeqb"
            disabled={false}
            size="hecto"
          >
            Thu, 8:00 PM
          </div>
        </div>
        <div
          className="row__content EFDAD"
        >
          <div
            className="column__mobile-only leZhxW"
          >
            <div
              className="text text--dark text--primary list-row__title keoegT iFABcd"
              disabled={false}
              size={
                Object {
                  "large": undefined,
                  "medium": "kilo",
                  "small": undefined,
                  "xLarge": undefined,
                  "xSmall": "hecto",
                }
              }
            >
              Del Mar Fairgrounds
            </div>
            <div
              className="text text--dark text--secondary list-row--subtitle PtISw jomeqb"
              disabled={false}
              size="hecto"
            >
              KABOO 3-Day Pass
            </div>
          </div>
          <div
            className="column__content list-row__title column__content--expanded cEBRXE"
          >
            <div
              className="text text--dark text--primary keoegT iFABcd"
              disabled={false}
              size={
                Object {
                  "large": undefined,
                  "medium": "kilo",
                  "small": undefined,
                  "xLarge": undefined,
                  "xSmall": "hecto",
                }
              }
            >
              Del Mar Fairgrounds
            </div>
          </div>
          <div
            className="column__content list-row__title column__content--expanded cEBRXE"
          >
            <div
              className="text text--dark text--primary subtitle list-row--subtitle subtitle--collapsed keoegT iFABcd"
              disabled={false}
              size={
                Object {
                  "large": undefined,
                  "medium": "kilo",
                  "small": undefined,
                  "xLarge": undefined,
                  "xSmall": "hecto",
                }
              }
            >
              KABOO 3-Day Pass
            </div>
          </div>
          <div
            className="column__content list-row__title column__content--fixed column__content--collapsed eDbEhs"
          >
            <div
              className="text text--dark text--primary subtitle keoegT iFABcd"
              disabled={false}
              size={
                Object {
                  "large": undefined,
                  "medium": "kilo",
                  "small": undefined,
                  "xLarge": undefined,
                  "xSmall": "hecto",
                }
              }
            >
              Del Mar Fairgrounds
            </div>
          </div>
        </div>
        <div
          className="hcOeVH"
        >
          <span
            aria-label="See Tickets"
            className="gGqupZ"
            role="button"
            size="regular"
            width="102px"
          >
            See Tickets
          </span>
        </div>
      </a>
      <div
        className="dVldQS"
      >
        <button
          aria-label="More Info"
          className="button--more-info icon-button--last dZkVVO"
          data-index={0}
          onClick={[Function]}
          role="button"
          type="button"
        >
          <svg
            fill="rgba(38, 38, 38, 0.65)"
            height={22}
            viewBox="0 0 5 21"
            width={5.5}
          >
            <path
              d="M0 2.5C0 1.81.242 1.22.727.732A2.394 2.394 0 0 1 2.492 0a2.42 2.42 0 0 1 1.773.732C4.755 1.221 5 1.81 5 2.5s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 5C1.8 5 1.212 4.756.727 4.268A2.418 2.418 0 0 1 0 2.5zm0 8.008c0-.692.242-1.283.727-1.773A2.39 2.39 0 0 1 2.492 8c.692 0 1.283.245 1.773.735S5 9.815 5 10.508a2.39 2.39 0 0 1-.735 1.765A2.43 2.43 0 0 1 2.492 13c-.692 0-1.28-.242-1.765-.727A2.403 2.403 0 0 1 0 10.508zM0 18.5c0-.69.242-1.28.727-1.768A2.394 2.394 0 0 1 2.492 16a2.42 2.42 0 0 1 1.773.732c.49.489.735 1.078.735 1.768s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 21c-.692 0-1.28-.244-1.765-.732A2.418 2.418 0 0 1 0 18.5z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="container__overflow container__overflow--expanded dApCYQ"
    />
  </div>
</div>
`;

exports[`<ListRow /> renders List Row with variant withLink correctly 1`] = `
<div
  className="adGQN"
  onClick={[Function]}
  onModalClose={[Function]}
  onRowCollapse={[Function]}
>
  <div
    className="row__wrapper row__wrapper--collapsed iDIzEx"
    onCloseRequest={[Function]}
  >
    <div
      className="list__container eqMTEn"
    >
      <button
        aria-expanded={false}
        aria-label="Expand Row"
        className="button--expand-or-collapse button--collapsed laDsHS"
        data-index={0}
        onClick={[Function]}
        role="button"
        size={45}
        type="button"
      >
        <svg
          fill="#1f262d"
          height={15}
          style={Object {}}
          viewBox="0 0 15 7"
          width={15}
        >
          <path
            d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
          />
        </svg>
      </button>
      <a
        aria-label="See Tickets"
        className="link__wrapper cAyegw"
        href="/"
        onClick={[Function]}
        role="link"
      >
        <div
          className="date__wrapper hqkpgr"
        >
          <div
            className="text text--dark text--primary date--text gpIiDw"
            disabled={false}
            size={
              Object {
                "large": undefined,
                "medium": "kilo",
                "small": undefined,
                "xLarge": undefined,
                "xSmall": "hecto",
              }
            }
          >
            apr 23
          </div>
          <div
            className="text text--dark text--secondary day-time--text PtISw jomeqb"
            disabled={false}
            size="hecto"
          >
            Thu, 8:00 PM
          </div>
        </div>
        <div
          className="row__content EFDAD"
        >
          <div
            className="column__mobile-only leZhxW"
          >
            <div
              className="text text--dark text--primary list-row__title keoegT iFABcd"
              disabled={false}
              size={
                Object {
                  "large": undefined,
                  "medium": "kilo",
                  "small": undefined,
                  "xLarge": undefined,
                  "xSmall": "hecto",
                }
              }
            >
              Del Mar Fairgrounds
            </div>
            <div
              className="text text--dark text--secondary list-row--subtitle PtISw jomeqb"
              disabled={false}
              size="hecto"
            >
              KABOO 3-Day Pass
            </div>
          </div>
          <div
            className="column__content list-row__title column__content--collapsed cEBRXE"
          >
            <div
              className="text text--dark text--primary keoegT iFABcd"
              disabled={false}
              size={
                Object {
                  "large": undefined,
                  "medium": "kilo",
                  "small": undefined,
                  "xLarge": undefined,
                  "xSmall": "hecto",
                }
              }
            >
              Del Mar Fairgrounds
            </div>
          </div>
          <div
            className="column__content list-row__title column__content--collapsed cEBRXE"
          >
            <div
              className="text text--dark text--primary subtitle list-row--subtitle subtitle--collapsed keoegT iFABcd"
              disabled={false}
              size={
                Object {
                  "large": undefined,
                  "medium": "kilo",
                  "small": undefined,
                  "xLarge": undefined,
                  "xSmall": "hecto",
                }
              }
            >
              KABOO 3-Day Pass
            </div>
          </div>
          <div
            className="column__content list-row__title column__content--fixed column__content--expanded eDbEhs"
          >
            <div
              className="text text--dark text--primary subtitle keoegT iFABcd"
              disabled={false}
              size={
                Object {
                  "large": undefined,
                  "medium": "kilo",
                  "small": undefined,
                  "xLarge": undefined,
                  "xSmall": "hecto",
                }
              }
            >
              KABOO 3-Day Pass
            </div>
          </div>
        </div>
        <div
          className="hcOeVH"
        >
          <span
            aria-label="See Tickets"
            className="gGqupZ"
            role="button"
            size="regular"
            width="102px"
          >
            See Tickets
          </span>
          <div
            className="eGnrhg"
          >
            <div
              className="text text--dark text--secondary PtISw ifpOvA"
              disabled={false}
              size="uno"
            >
              click here
            </div>
          </div>
        </div>
      </a>
      <div
        className="dVldQS"
      >
        <button
          aria-label="More Info"
          className="button--more-info icon-button--last dZkVVO"
          data-index={0}
          onClick={[Function]}
          role="button"
          type="button"
        >
          <svg
            fill="rgba(38, 38, 38, 0.65)"
            height={22}
            viewBox="0 0 5 21"
            width={5.5}
          >
            <path
              d="M0 2.5C0 1.81.242 1.22.727.732A2.394 2.394 0 0 1 2.492 0a2.42 2.42 0 0 1 1.773.732C4.755 1.221 5 1.81 5 2.5s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 5C1.8 5 1.212 4.756.727 4.268A2.418 2.418 0 0 1 0 2.5zm0 8.008c0-.692.242-1.283.727-1.773A2.39 2.39 0 0 1 2.492 8c.692 0 1.283.245 1.773.735S5 9.815 5 10.508a2.39 2.39 0 0 1-.735 1.765A2.43 2.43 0 0 1 2.492 13c-.692 0-1.28-.242-1.765-.727A2.403 2.403 0 0 1 0 10.508zM0 18.5c0-.69.242-1.28.727-1.768A2.394 2.394 0 0 1 2.492 16a2.42 2.42 0 0 1 1.773.732c.49.489.735 1.078.735 1.768s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 21c-.692 0-1.28-.244-1.765-.732A2.418 2.418 0 0 1 0 18.5z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="row__content--bottom gMkfym"
    >
      <div
        className="jMKHiO"
      >
        <button
          className="link--row-options eXFyMS hAlRXB"
          data-index={0}
          href={null}
          onClick={[Function]}
          rel="_self"
          size="hecto"
          target=""
        >
          Ticket options available
        </button>
        <a
          className="fRvHEx dYTnRX"
          data-index={0}
          href="/"
          onClick={null}
          rel="_self"
          size="hecto"
          target=""
        >
          Ticket options available
        </a>
      </div>
    </div>
    <div
      className="container__overflow container__overflow--collapsed dApCYQ"
    />
  </div>
</div>
`;

exports[`<ListRow /> renders standard List Row correctly 1`] = `
<div
  className="adGQN"
  onClick={[Function]}
  onModalClose={[Function]}
  onRowCollapse={[Function]}
>
  <div
    className="row__wrapper row__wrapper--collapsed iDIzEx"
    onCloseRequest={[Function]}
  >
    <div
      className="list__container MPOiE"
    >
      <button
        aria-expanded={false}
        aria-label="Expand Row"
        className="button--expand-or-collapse button--collapsed laDsHS"
        data-index={0}
        onClick={[Function]}
        role="button"
        size={45}
        type="button"
      >
        <svg
          fill="#1f262d"
          height={15}
          style={Object {}}
          viewBox="0 0 15 7"
          width={15}
        >
          <path
            d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
          />
        </svg>
      </button>
      <a
        aria-label="See Tickets"
        className="link__wrapper cAyegw"
        href="/"
        onClick={[Function]}
        role="link"
      >
        <div
          className="date__wrapper hqkpgr"
        >
          <div
            className="text text--dark text--primary date--text gpIiDw"
            disabled={false}
            size={
              Object {
                "large": undefined,
                "medium": "kilo",
                "small": undefined,
                "xLarge": undefined,
                "xSmall": "hecto",
              }
            }
          >
            apr 23
          </div>
          <div
            className="text text--dark text--secondary day-time--text PtISw jomeqb"
            disabled={false}
            size="hecto"
          >
            Thu, 8:00 PM
          </div>
        </div>
        <div
          className="row__content EFDAD"
        >
          <div
            className="column__mobile-only leZhxW"
          >
            <div
              className="text text--dark text--primary list-row__title keoegT iFABcd"
              disabled={false}
              size={
                Object {
                  "large": undefined,
                  "medium": "kilo",
                  "small": undefined,
                  "xLarge": undefined,
                  "xSmall": "hecto",
                }
              }
            >
              Del Mar Fairgrounds
            </div>
            <div
              className="text text--dark text--secondary list-row--subtitle PtISw jomeqb"
              disabled={false}
              size="hecto"
            >
              KABOO 3-Day Pass
            </div>
          </div>
          <div
            className="column__content list-row__title column__content--collapsed cEBRXE"
          >
            <div
              className="text text--dark text--primary keoegT iFABcd"
              disabled={false}
              size={
                Object {
                  "large": undefined,
                  "medium": "kilo",
                  "small": undefined,
                  "xLarge": undefined,
                  "xSmall": "hecto",
                }
              }
            >
              Del Mar Fairgrounds
            </div>
          </div>
          <div
            className="column__content list-row__title column__content--collapsed cEBRXE"
          >
            <div
              className="text text--dark text--primary subtitle list-row--subtitle subtitle--collapsed keoegT iFABcd"
              disabled={false}
              size={
                Object {
                  "large": undefined,
                  "medium": "kilo",
                  "small": undefined,
                  "xLarge": undefined,
                  "xSmall": "hecto",
                }
              }
            >
              KABOO 3-Day Pass
            </div>
          </div>
          <div
            className="column__content list-row__title column__content--fixed column__content--expanded eDbEhs"
          >
            <div
              className="text text--dark text--primary subtitle keoegT iFABcd"
              disabled={false}
              size={
                Object {
                  "large": undefined,
                  "medium": "kilo",
                  "small": undefined,
                  "xLarge": undefined,
                  "xSmall": "hecto",
                }
              }
            >
              KABOO 3-Day Pass
            </div>
          </div>
        </div>
        <div
          className="hcOeVH"
        >
          <span
            aria-label="See Tickets"
            className="gGqupZ"
            role="button"
            size="regular"
            width="102px"
          >
            See Tickets
          </span>
        </div>
      </a>
      <div
        className="dVldQS"
      >
        <button
          aria-label="More Info"
          className="button--more-info icon-button--last dZkVVO"
          data-index={0}
          onClick={[Function]}
          role="button"
          type="button"
        >
          <svg
            fill="rgba(38, 38, 38, 0.65)"
            height={22}
            viewBox="0 0 5 21"
            width={5.5}
          >
            <path
              d="M0 2.5C0 1.81.242 1.22.727.732A2.394 2.394 0 0 1 2.492 0a2.42 2.42 0 0 1 1.773.732C4.755 1.221 5 1.81 5 2.5s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 5C1.8 5 1.212 4.756.727 4.268A2.418 2.418 0 0 1 0 2.5zm0 8.008c0-.692.242-1.283.727-1.773A2.39 2.39 0 0 1 2.492 8c.692 0 1.283.245 1.773.735S5 9.815 5 10.508a2.39 2.39 0 0 1-.735 1.765A2.43 2.43 0 0 1 2.492 13c-.692 0-1.28-.242-1.765-.727A2.403 2.403 0 0 1 0 10.508zM0 18.5c0-.69.242-1.28.727-1.768A2.394 2.394 0 0 1 2.492 16a2.42 2.42 0 0 1 1.773.732c.49.489.735 1.078.735 1.768s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 21c-.692 0-1.28-.244-1.765-.732A2.418 2.418 0 0 1 0 18.5z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="container__overflow container__overflow--collapsed dApCYQ"
    />
  </div>
</div>
`;
